[Fix] HTML and product ts

--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -1,22 +1,10 @@
-<!--
-HACER EL PAGINADO
-averageRating NO FUNCIONA
--->
-
 <div class="body">
   <div class="container-md">
     <!-- Header -->
     <header class="bg-light border-bottom shadow-sm">
-      <div class="d-flex justify-content-between align-items-center px-4 py-2">
-        <!-- Logo -->
-        <div>
-          <img
-            src="https://via.placeholder.com/100x40"
-            alt="Logo"
-            class="img-fluid"
-          />
-        </div>
-      </div>
+      <div
+        class="d-flex justify-content-between align-items-center px-4 py-2"
+      ></div>
     </header>
 
     <!-- Banner -->
@@ -68,7 +56,6 @@ averageRating NO FUNCIONA
       <div class="row">
         <div class="col-12 col-md-6 col-lg-4" *ngFor="let product of products">
           <div class="card border card_border m-2">
-            <img class="card-img-top" alt="Imagen del producto" />
             <div class="card-body text-black">
               <h5 class="card-title">{{ product.name }}</h5>
               <p class="card-text text-black">
