--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -23,32 +23,26 @@
 
     <!-- Filters -->
     <div class="d-flex justify-content-center gap-3 my-3">
+     <form [formGroup]="filterForm" class="d-flex justify-content-center gap-3 my-3">
       <input
         type="text"
-        [(ngModel)]="filterName"
+        formControlName="filterName"
         class="form-control w-25"
         placeholder="Buscar por nombre"
       />
       <input
         type="number"
-        [(ngModel)]="minPrice"
+        formControlName="minPrice"
         class="form-control w-25"
         placeholder="Precio mínimo"
       />
       <input
         type="number"
-        [(ngModel)]="maxPrice"
+        formControlName="maxPrice"
         class="form-control w-25"
         placeholder="Precio máximo"
       />
-
-      <!-- Search Button -->
-      <button
-        class="btn text-white fw-bold d-flex align-items-center gap-2 btn_filter"
-        (click)="getProducts()"
-      >
-        <i class="bi bi-search"></i> Buscar
-      </button>
+    </form>
     </div>
 
     <!-- Product Cards -->
