--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -1,12 +1,5 @@
 <div class="body">
-  <div class="container-md">
-    <!-- Header -->
-    <header class="bg-light border-bottom shadow-sm">
-      <div
-        class="d-flex justify-content-between align-items-center px-4 py-2"
-      ></div>
-    </header>
-
+  <div class="container-md  px-4 py-2">
     <!-- Banner -->
     <section class="text-white position-relative border banner">
       <div class="row row-cols-1 row-cols-md-4 g-4 align-items-center mx-0">
@@ -23,26 +16,11 @@
 
     <!-- Filters -->
     <div class="d-flex justify-content-center gap-3 my-3">
-     <form [formGroup]="filterForm" class="d-flex justify-content-center gap-3 my-3">
-      <input
-        type="text"
-        formControlName="filterName"
-        class="form-control w-25"
-        placeholder="Buscar por nombre"
-      />
-      <input
-        type="number"
-        formControlName="minPrice"
-        class="form-control w-25"
-        placeholder="Precio mínimo"
-      />
-      <input
-        type="number"
-        formControlName="maxPrice"
-        class="form-control w-25"
-        placeholder="Precio máximo"
-      />
-    </form>
+      <form [formGroup]="filterForm" class="d-flex justify-content-center gap-3 my-3">
+        <input type="text" formControlName="filterName" class="form-control w-25" placeholder="Buscar por nombre" />
+        <input type="number" formControlName="minPrice" class="form-control w-25" placeholder="Precio mínimo" />
+        <input type="number" formControlName="maxPrice" class="form-control w-25" placeholder="Precio máximo" />
+      </form>
     </div>
 
     <!-- Product Cards -->
@@ -54,9 +32,9 @@
               <h5 class="card-title">{{ product.name }}</h5>
               <p class="card-text text-black">
                 {{
-                  product.description.length > 50
-                    ? product.description.substring(0, 50) + "..."
-                    : product.description
+                product.description.length > 50
+                ? product.description.substring(0, 50) + "..."
+                : product.description
                 }}
               </p>
               <p class="price"><strong>Precio:</strong> ${{ product.price }}</p>
@@ -64,16 +42,11 @@
             </div>
             <div class="card-footer">
               <div class="star-rating">
-                <ng-container
-                  *ngFor="let star of [1, 2, 3, 4, 5]; let i = index"
-                >
-                  <i
-                    class="bi"
-                    [ngClass]="{
+                <ng-container *ngFor="let star of [1, 2, 3, 4, 5]; let i = index">
+                  <i class="bi" [ngClass]="{
                       'bi-star-fill': (product.averageRating ?? 0) > i,
                       'bi-star': (product.averageRating ?? 0) <= i,
-                    }"
-                  ></i>
+                    }"></i>
                 </ng-container>
               </div>
             </div>
@@ -83,19 +56,12 @@
 
       <!-- Controles de paginado -->
       <div class="d-flex justify-content-center align-items-center my-3">
-        <button
-          class="btn btn-secondary m-1"
-          [disabled]="currentPage === 1"
-          (click)="changePage(currentPage - 1)"
-        >
+        <button class="btn btn-secondary m-1" [disabled]="currentPage === 1" (click)="changePage(currentPage - 1)">
           Anterior
         </button>
         <span class="mx-2">Página {{ currentPage }} de {{ totalPages }}</span>
-        <button
-          class="btn btn-secondary m-1"
-          [disabled]="currentPage === totalPages"
-          (click)="changePage(currentPage + 1)"
-        >
+        <button class="btn btn-secondary m-1" [disabled]="currentPage === totalPages"
+          (click)="changePage(currentPage + 1)">
           Siguiente
         </button>
       </div>
