--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -4,40 +4,33 @@
     <section class="text-white position-relative border banner">
       <div class="row row-cols-1 row-cols-md-4 g-4 align-items-center mx-0">
         <div class="col-md-6">
-          <div class="p-5">
-            <h2 class="fw-bold">Bienvenido al Dto.</h2>
+          <div class="p-5 justify-content-between position-static d-flex">
+
+            <h2 class="fw-bold align-content-md-between ">Web de producto</h2>
+            <button
+          type="button"
+          class="button_additional_settings  rounded-pill"
+          (click)="submit()"
+        >
+          Cerrar sesión
+        </button>
+            <!--Rellenar con el usuername-->
+           
+                <h2 class="fw-bold align-content-md-between text-light">Bienvenido {{ user.username }} .</h2>
+
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="col-md-6 position-relative">
-          <div class="d-flex justify-content-around align-items-center"></div>
-        </div>
-      </div>
+      
+     
     </section>
 
     <!-- Filters -->
     <div class="d-flex justify-content-center gap-3 my-3">
-      <form
-        [formGroup]="filterForm"
-        class="d-flex justify-content-center gap-3 my-3"
-      >
-        <input
-          type="text"
-          formControlName="filterName"
-          class="form-control w-25"
-          placeholder="Buscar por nombre"
-        />
-        <input
-          type="number"
-          formControlName="minPrice"
-          class="form-control w-25"
-          placeholder="Precio mínimo"
-        />
-        <input
-          type="number"
-          formControlName="maxPrice"
-          class="form-control w-25"
-          placeholder="Precio máximo"
-        />
+      <form [formGroup]="filterForm" class="d-flex justify-content-center gap-3 my-3">
+        <input type="text" formControlName="filterName" class="form-control w-25" placeholder="Buscar por nombre" />
+        <input type="number" formControlName="minPrice" class="form-control w-25" placeholder="Precio mínimo" />
+        <input type="number" formControlName="maxPrice" class="form-control w-25" placeholder="Precio máximo" />
       </form>
     </div>
 
@@ -50,9 +43,9 @@
               <h5 class="card-title">{{ product.name }}</h5>
               <p class="card-text text-black">
                 {{
-                  product.description.length > 50
-                    ? product.description.substring(0, 50) + "..."
-                    : product.description
+                product.description.length > 50
+                ? product.description.substring(0, 50) + "..."
+                : product.description
                 }}
               </p>
               <p class="price"><strong>Precio:</strong> ${{ product.price }}</p>
@@ -61,16 +54,11 @@
 
             <div class="card-footer">
               <div class="star-rating">
-                <ng-container
-                  *ngFor="let star of [1, 2, 3, 4, 5]; let i = index"
-                >
-                  <i
-                    class="bi"
-                    [ngClass]="{
+                <ng-container *ngFor="let star of [1, 2, 3, 4, 5]; let i = index">
+                  <i class="bi" [ngClass]="{
                       'bi-star-fill': (product.averageRating ?? 0) > i,
                       'bi-star': (product.averageRating ?? 0) <= i,
-                    }"
-                  ></i>
+                    }"></i>
                 </ng-container>
               </div>
             </div>
@@ -89,23 +77,15 @@
       </ng-template>
 
       <!-- Paging controls -->
-     <div class="d-flex justify-content-center align-items-center my-3">
-  <button
-    class="btn btn-secondary m-1"
-    [disabled]="currentPage === 1"
-    (click)="prevPage()"
-  >
-    Anterior
-  </button>
-  <span class="mx-2">Página {{ currentPage }}</span>
-  <button
-    class="btn btn-secondary m-1"
-    [disabled]="!hasMore"
-    (click)="nextPage()"
-  >
-    Siguiente
-  </button>
-</div>
+      <div class="d-flex justify-content-center align-items-center my-3">
+        <button class="btn btn-secondary m-1" [disabled]="currentPage === 1" (click)="prevPage()">
+          Anterior
+        </button>
+        <span class="mx-2">Página {{ currentPage }}</span>
+        <button class="btn btn-secondary m-1" [disabled]="!hasMore" (click)="nextPage()">
+          Siguiente
+        </button>
+      </div>
 
     </div>
   </div>
