--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -1,32 +1,25 @@
 <div class="body">
   <div class="container-md px-4 py-2">
-   <!-- Banner -->
-<section class="text-white position-relative border banner">
-  <div class="container-fluid">
-    <div class="d-flex justify-content-between align-items-center p-4">
-      <!-- Parte izquierda - Nombre de la aplicación -->
-      <div>
-        <h2 class="fw-bold m-0">Web de producto</h2>
-      </div>
+    <!-- Banner -->
+    <section class="text-white position-relative border banner">
+      <div class="container-fluid">
+        <div class="d-flex justify-content-between align-items-center p-4">
+          <!-- Left side - Application name-->
+          <div>
+            <h2 class="fw-bold m-0">Web de producto</h2>
+          </div>
 
-      <!-- Parte derecha - Mensaje y botón -->
-      <div class="d-flex align-items-center gap-3">
-        <!-- Mensaje de bienvenida -->
-          <h2 class="fw-bold m-0">Bienvenido {{ username }}!!!</h2>
-        
-        
-        <!-- Botón de cerrar sesión -->
-        <button
-          type="button"
-          class="btn rounded-pill"
-          (click)="submit()"
-        >
-          Cerrar sesión
-        </button>
+          <!--Right side - Message and button  -->
+          <div class="d-flex align-items-center gap-3">
+            <h2 class="fw-bold m-0">Bienvenido {{ username }}!!!</h2>
+
+            <button type="button" class="btn rounded-pill" (click)="submit()">
+              Cerrar sesión
+            </button>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
 
     <!-- Filters -->
     <div class="d-flex justify-content-center gap-3 my-3">
