--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -1,5 +1,5 @@
 <div class="body">
-  <div class="container-md px-4 py-2">
+  <div class="container-md px-4 py-2  ">
     <!-- Banner -->
     <section class="text-white position-relative border banner">
       <div class="container-fluid">
@@ -11,9 +11,9 @@
 
           <!--Right side - Message and button  -->
           <div class="d-flex align-items-center gap-3">
-            <h2 class="fw-bold m-0">Bienvenido {{ username }}!!!</h2>
+            <p class="fw-bold m-0">Bienvenido <strong>{{ username }}!!!</strong></p>
 
-            <button type="button" class="btn rounded-pill" (click)="submit()">
+            <button type="button" class="btn border text-light" (click)="submit()">
               Cerrar sesión
             </button>
           </div>
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Product Cards -->
-    <div *ngIf="!isLoading" class="card-deck h-100">
+    <div *ngIf="!isLoading" class="card-deck h-100 mw-100  ">
       <div class="row">
         <div class="col-12 col-md-6 col-lg-4" *ngFor="let product of products">
           <div class="card border card_border m-2">
