--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -22,7 +22,9 @@
                     >Crear Producto</a
                   >
                 </li>
-                <li><a class="dropdown-item" href="#">Editar Producto</a></li>
+                <li><a class="dropdown-item" (click)="navigateToEditProduct()"
+                    >Editar Producto</a
+                  ></li>
                 <li><a class="dropdown-item" href="#">Eliminar Producto</a></li>
               </ul>
             </div>
