--- a/src/app/features/product/product.component.scss
+++ b/src/app/features/product/product.component.scss
@@ -28,7 +28,15 @@
   background-color: rgb(124, 13, 124);
   border-color: rgb(255, 255, 255);
 }
+.btn_settings_1{
+  background-color: rgb(131, 0, 131);
+  border-color: rgb(255, 255, 255);
+}
 
+btn_settings_3{
+  background-color: rgb(34, 0, 34);
+  border-color: rgb(255, 255, 255);
+}
 
 .star-rating{
  color: #721275;
