--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -78,7 +78,7 @@
               </p>
               <p class="price"><strong>Precio:</strong> ${{ product.price }}</p>
               <a class="btn text-white fw-bold btn_settings"> Ver detalles </a>
-               <a class="btn text-white fw-bold btn_settings_1 ms-5" (click)="navigateToEditProduct()"> Editar Producto </a>
+               <a class="btn text-white fw-bold btn_settings_1 ms-5" (click)="navigateToEditProduct(product.id)"> Editar Producto </a>
                 <a class="btn text-white fw-bold btn_settings_3 ms-5"> Eliminar Producto </a>
             </div>
 
