[FIX] Fix comment service

--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -82,6 +82,8 @@
               </div>
               <a class="btn text-white fw-bold btn_settings_1 ms-5" (click)="navigateToEditProduct(product.id)"> Editar
                 Producto </a>
+                <a class="btn text-white fw-bold btn_settings_1 ms-5" (click)="navigateToDetailsProduct(product.id)"> Detalles del
+                Producto </a>
             </div>
           </div>
 
