[FTR] New button in products detail view

--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -17,7 +17,7 @@
                 </li>
               </ul>
             </div>
-            <h2 class="fw-bold">Bienvenido al Dto.</h2>
+            <h2 class="fw-bold">Bienvenido al Dpto.</h2>
           </div>
         </div>
         <div class="col-md-6 position-relative">
